# TP-Seminars

./: CompileOnRaspberry  README.md  Readme  myscript
tp2/: CMakeLists.txt
tp2/A/: preparing.py
tp2/B/: CMakeLists.txt  lib.cpp  lib.h
tp2/C/: main.cpp
